fix some alignments

--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -13,7 +13,7 @@
 .content-container {
     background-color: white;
     display: inline-block;
-    margin-top: 4rem;
+    min-height: 30rem;
 }
 
 .gallery-container {
